trying to fix black borders on mobile

--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Bungee+Shade&family=IM+Fell+English+SC&family=Tilt+Prism:YROT@-13&display=swap");
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 #page-wrap {
   padding-bottom: 10px;
   padding-top: 10px;
